force-app/main/default/objects/VCG_CPQ_Quote__c/VCG_CPQ_Quote__c.object-meta.xml
<CustomObject>
    <description>A quote object storing the proposal(s) and line items.</description>
    <label>Quote_vcg</label>
    <nameField>
        <displayFormat>{YYYY}-{00000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes_vcg</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>