force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Account_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Legal_Name__c</fullName>
    <label>Account Legal Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>