force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Approval_Group_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Approval_Group_Accounting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Group Accounting</label>
    <type>Checkbox</type>
</CustomField>