force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Approval_Group_Contract_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Approval_Group_Contract_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Group Contract Renewal</label>
    <type>Checkbox</type>
</CustomField>