force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Approval_Group_CPQ_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Approval_Group_CPQ_Analytics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Group CPQ Analytics</label>
    <type>Checkbox</type>
</CustomField>