force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Approval_Group_Legal__c.field-meta.xml
<CustomField>
    <fullName>Approval_Group_Legal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Group Legal</label>
    <type>Checkbox</type>
</CustomField>