force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Approval_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Approval_Sequence__c</fullName>
    <label>Approval Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>