force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Check_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Check_Approvals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Approvals</label>
    <type>Checkbox</type>
</CustomField>