force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this quote is a clone of another quote, this field will point back to the original quote</inlineHelpText>
    <label>Cloned From</label>
    <referenceTo>VCG_CPQ_Quote__c</referenceTo>
    <relationshipName>Cloned_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>