force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact that appears in output</description>
    <inlineHelpText>Contact that appears in output</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Quote_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>