force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <inlineHelpText>Contract Term in Months</inlineHelpText>
    <label>Contract Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>