force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Deposit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Notes__c</fullName>
    <inlineHelpText>e.g. &quot;2 months of hardware fees&quot;</inlineHelpText>
    <label>Deposit Notes</label>
    <type>TextArea</type>
</CustomField>