force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Distributor_Level__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Level__c</fullName>
    <label>Distributor Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distributor-North America</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>