force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Evaluated_Status__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_Status__c</fullName>
    <description>This field was added to fix the save/approval time gap issue</description>
    <label>Evaluated Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre Evaluation</fullName>
                <default>true</default>
                <label>Pre Evaluation</label>
            </value>
            <value>
                <fullName>Evaluated</fullName>
            </value>
            <value>
                <fullName>Post Evaluation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>