force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <label>Quote Valid Until</label>
    <type>Date</type>
</CustomField>