force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Extended_Payment_Terms_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Extended_Payment_Terms_Reasons__c</fullName>
    <label>Extended Payment Terms Reasons</label>
    <type>TextArea</type>
</CustomField>