force-app/main/default/objects/VCG_CPQ_Quote__c/fields/External_Notes__c.field-meta.xml
<CustomField>
    <fullName>External_Notes__c</fullName>
    <description>External notes that will be displayed in the quote.</description>
    <inlineHelpText>Displayed to customer in quote.</inlineHelpText>
    <label>External Notes</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>