force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Groups_Active__c.field-meta.xml
<CustomField>
    <fullName>Groups_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if there is at least one group defined for the products in the quote or the assets on the account.</description>
    <label>Groups Active</label>
    <type>Checkbox</type>
</CustomField>