force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Invoice_Address__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice Address (Required)</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Address__c.Location_Type__c</field>
            <operation>equals</operation>
            <value>Invoice Address</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipName>InvoiceAddress</relationshipName>
    <type>Lookup</type>
</CustomField>