force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Is_Forced_Sync__c.field-meta.xml
<CustomField>
    <fullName>Is_Forced_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Forced Sync</label>
    <type>Checkbox</type>
</CustomField>