force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Primary?</label>
    <type>Checkbox</type>
</CustomField>