force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Line_Items__c</fullName>
    <label>Line Items</label>
    <summaryForeignKey>VCG_CPQ_Quote_Product__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>