force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Maintenance__c</fullName>
    <label>Maintenance %</label>
    <summarizedField>VCG_CPQ_Quote_Product__c.Maintenance_Percent__c</summarizedField>
    <summaryForeignKey>VCG_CPQ_Quote_Product__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>