force-app/main/default/objects/VCG_CPQ_Quote__c/fields/MSA_Documents__c.field-meta.xml
<CustomField>
    <fullName>MSA_Documents__c</fullName>
    <inlineHelpText>GUIDs for MSA Documents generated by Drawloop.</inlineHelpText>
    <label>MSA Documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>