force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Needs_Approval__c.field-meta.xml
<CustomField>
    <fullName>Needs_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Approval</label>
    <type>Checkbox</type>
</CustomField>