force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Negotiation_Condition__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Condition__c</fullName>
    <description>Used by Mexico.</description>
    <inlineHelpText>Used by Mexico.</inlineHelpText>
    <label>Negotiation Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>CP</fullName>
            </value>
            <value>
                <fullName>LP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>