force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Negotiation_Type__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Type__c</fullName>
    <description>For Omni demo</description>
    <label>Negotiation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>