force-app/main/default/objects/VCG_CPQ_Quote__c/fields/NNARR_Total__c.field-meta.xml
<CustomField>
    <fullName>NNARR_Total__c</fullName>
    <label>NNARR Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>