force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Non_Standard_Terms__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Standard Terms</label>
    <type>Checkbox</type>
</CustomField>