force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Will not be displayed to customer in the quote output.</inlineHelpText>
    <label>Internal Notes</label>
    <type>TextArea</type>
</CustomField>