force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Omni_Countersigner__c.field-meta.xml
<CustomField>
    <fullName>Omni_Countersigner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Omni Countersigner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>