force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Omni_Countersigner_Email__c.field-meta.xml
<CustomField>
    <fullName>Omni_Countersigner_Email__c</fullName>
    <formula>Omni_Countersigner__r.Email</formula>
    <label>Omni Countersigner Email</label>
    <type>Text</type>
</CustomField>