force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Omni_Countersigner_Name__c.field-meta.xml
<CustomField>
    <fullName>Omni_Countersigner_Name__c</fullName>
    <formula>Omni_Countersigner__r.FirstName + &quot; &quot; + Omni_Countersigner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Omni Countersigner Name</label>
    <type>Text</type>
</CustomField>