force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Prep_Sync__c.field-meta.xml
<CustomField>
    <fullName>Prep_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prep Sync</label>
    <type>Checkbox</type>
</CustomField>