force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <label>Price List</label>
    <length>6</length>
    <type>Text</type>
</CustomField>