force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Pricebook_Id__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Id__c</fullName>
    <label>Pricebook Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>