force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Pricing_Region__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Region__c</fullName>
    <label>Pricing Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A Market</fullName>
            </value>
            <value>
                <fullName>B Market</fullName>
            </value>
            <value>
                <fullName>C Market</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>