force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Primary_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business_Unit__c</fullName>
    <formula>TEXT( Account__r.Primary_Business_Unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Business Unit</label>
    <type>Text</type>
</CustomField>