force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Process_Sync__c.field-meta.xml
<CustomField>
    <fullName>Process_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Sync</label>
    <type>Checkbox</type>
</CustomField>