force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Product_Count__c</fullName>
    <label>Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>