force-app/main/default/objects/VCG_CPQ_Quote__c/fields/QPs_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>QPs_Last_Modified__c</fullName>
    <description>This is used just to trigger an update to the Quote after the last Quote Product has been saved. This tracks the Last Modified so will be guaranteed to be updated anytime any of the QP records are updated. This is used to trigger the QuoteUtility.setMSADocIds() trigger handler (possibly others).</description>
    <label>QPs Last Modified</label>
    <summarizedField>VCG_CPQ_Quote_Product__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>VCG_CPQ_Quote_Product__c.Quote__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>