force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Quote_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_18_Digit_ID__c</fullName>
    <description>18 digit ID for Quotes</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote 18 Digit ID</label>
    <type>Text</type>
</CustomField>