force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores this Quotes Lookup for use in mapping to the Opportunity for the Primary Quote</description>
    <label>Quote ***</label>
    <referenceTo>VCG_CPQ_Quote__c</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>