force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Quote_Contact__c.field-meta.xml
<CustomField>
    <fullName>Quote_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>