force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Quote_Documents_Signed__c.field-meta.xml
<CustomField>
    <fullName>Quote_Documents_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Primary Quote Document(s) are signed</description>
    <inlineHelpText>Checked if the Primary Quote Document(s) are signed</inlineHelpText>
    <label>Quote Documents Signed</label>
    <type>Checkbox</type>
</CustomField>