force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote ID</label>
    <type>Text</type>
</CustomField>