force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Ran_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Ran_Approvals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ran Approvals</label>
    <type>Checkbox</type>
</CustomField>