force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Ready_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready For Approval</label>
    <type>Checkbox</type>
</CustomField>