force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Requires_PS_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_PS_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the quote will require PS approval.</inlineHelpText>
    <label>Requires PS Approval</label>
    <type>Checkbox</type>
</CustomField>