force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Roadnet_Market__c.field-meta.xml
<CustomField>
    <fullName>Roadnet_Market__c</fullName>
    <label>Roadnet Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Developed</fullName>
            </value>
            <value>
                <fullName>Emerging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>