force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Sales_Order_ERP__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_ERP__c</fullName>
    <formula>Opportunity__r.Sales_Order_ERP__c</formula>
    <label>Sales Order ERP</label>
    <type>Text</type>
</CustomField>