force-app/main/default/objects/VCG_CPQ_Quote__c/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Address</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipName>ShippingShipping</relationshipName>
    <type>Lookup</type>
</CustomField>