force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Signed_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>Signed_by_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically checked once signed by customer and returned via EchoSign</description>
    <inlineHelpText>Automatically checked once signed by customer and returned via EchoSign</inlineHelpText>
    <label>Signed by Customer</label>
    <type>Checkbox</type>
</CustomField>