force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Software_Total__c.field-meta.xml
<CustomField>
    <fullName>Software_Total__c</fullName>
    <label>Software Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>