force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Quote Valid From</label>
    <type>Date</type>
</CustomField>