force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Suggested_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Payment_Terms__c</fullName>
    <label>Suggested Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>