force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Tier_Type__c.field-meta.xml
<CustomField>
    <fullName>Tier_Type__c</fullName>
    <label>Tier Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>