force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>