force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Total_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Amount__c</fullName>
    <inlineHelpText>Sum of all discounts applied at quote product level</inlineHelpText>
    <label>Total Discount Amount</label>
    <summarizedField>VCG_CPQ_Quote_Product__c.Discount_Amount__c</summarizedField>
    <summaryForeignKey>VCG_CPQ_Quote_Product__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>