force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Total_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_List_Price__c</fullName>
    <inlineHelpText>Sum of List Price of all Quote line items</inlineHelpText>
    <label>Total List Price</label>
    <summarizedField>VCG_CPQ_Quote_Product__c.List_Price__c</summarizedField>
    <summaryForeignKey>VCG_CPQ_Quote_Product__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>