force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Total_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Total_Maintenance__c</fullName>
    <label>Annual Maintenance Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>