force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Total_Mobile_Casts__c.field-meta.xml
<CustomField>
    <fullName>Total_Mobile_Casts__c</fullName>
    <inlineHelpText>Total number of Mobile Cast products *on the quote* (does not include assets).</inlineHelpText>
    <label>Total Mobile Casts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>