force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Total_Territory_Planners__c.field-meta.xml
<CustomField>
    <fullName>Total_Territory_Planners__c</fullName>
    <inlineHelpText>Total number of Territory Planner products owned/purchased</inlineHelpText>
    <label>Total Territory Planners</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>