force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Total_Uplift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Uplift_Amount__c</fullName>
    <label>Total Uplift Amount</label>
    <summarizedField>VCG_CPQ_Quote_Product__c.Uplift_Amount__c</summarizedField>
    <summaryForeignKey>VCG_CPQ_Quote_Product__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>