force-app/main/default/objects/VCG_CPQ_Quote__c/fields/Uplift__c.field-meta.xml
<CustomField>
    <fullName>Uplift__c</fullName>
    <formula>Total_Uplift_Amount__c / Total_List_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uplift %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>